k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-svc
  namespace: default
spec:
  selector:
    app: devops-app
  ports:
  - name: http
    port: 80
    targetPort: 8000
  type: ClusterIP
